# haskellers

./: .dockerignore  .gitignore  .gitlab-ci.yml  .travis.yml  API.markdown  Application.hs  Controller.hs  Dockerfile  Foundation.hs  Haskellers.hs  Import.hs  Model.hs  README.md  SESCreds-dummy.hs  Settings.hs  StaticFiles.hs  TODO  amber.yaml  api-test.hs  devel-server.hs  devel.hs  docker.sh  entities  fastcgi.hs  haskellers.cabal  haskellers.hs  main.hs  package.yaml  routes  run.sh  simple-server.hs  stack.yaml  upload.sh
.github/workflows/: runtime.yml
Handler/: Admin.hs  Bling.hs  Email.hs  Faq.hs  Job.hs  News.hs  Package.hs  Poll.hs  Profile.hs  Real.hs  Root.hs  Skills.hs  Team.hs  Topic.hs  User.hs
Model/: Types.hs
Yesod/: Message.hs
app/: devel-server.hs  devel.hs
cassius/: admin-controls.cassius  bling.cassius  default-layout.cassius  faq.cassius  homepage.cassius  job.cassius  jobs.cassius  login-status.cassius  login.cassius  news-admin.cassius  news.cassius  profile.cassius  skills.cassius  team.cassius  teams.cassius  topic.cassius  topics.cassius  user.cassius  users.cassius
config/: keter.yaml  models  postgres-dummy.yml  postgresql.yml  routes  settings.yml  test-settings.yml
config/db/: aws  aws.asc  aws.yaml.example  client-session-key.aes  client-session-key.aes.asc  facebook.yaml.example  google-email.yaml.example  postgresql.yml  postgresql.yml.asc
docker/: Dockerfile
hamlet/: admin-controls.hamlet  admin-users.hamlet  bling.hamlet  default-layout.hamlet  faq.hamlet  flag.hamlet  homepage.hamlet  job.hamlet  jobs.hamlet  login-status.hamlet  login.hamlet  messages.hamlet  navbar-section.hamlet  news-item.hamlet  news.hamlet  poll.hamlet  polls.hamlet  profile.hamlet  skill.hamlet  skills.hamlet  team-form.hamlet  team.hamlet  teams-form.hamlet  teams.hamlet  topic.hamlet  topics.hamlet  user.hamlet  users.hamlet
julius/: default-layout.julius  homepage.julius  profile.julius
kube/: haskellers-postgresql-secret.yaml.asc  rc.yaml  service.yaml
messages/: en.msg  fr.msg  he.msg  ru.msg  se.msg
src/: Application.hs  Foundation.hs  StaticFiles.hs
src/Handler/: Admin.hs  Bling.hs  Faq.hs  Job.hs  News.hs  Package.hs  Privacy.hs  Profile.hs  Team.hs  Topic.hs  User.hs
src/Settings/: StaticFiles.hs
static/: jquery-ui.css  reset.css
templates/: admin-users.cassius  admin-users.julius  bling.cassius  bling.hamlet  default-layout-wrapper.hamlet  default-layout.cassius  default-layout.hamlet  default-layout.julius  flag.cassius  flag.hamlet  homepage.julius  job.cassius  job.hamlet  jobs.cassius  jobs.hamlet  login.hamlet  messages.hamlet  news-admin.cassius  news-item.hamlet  news.cassius  news.hamlet  poll.lucius  profile.hamlet  skills.cassius  team.cassius  team.hamlet  topic.hamlet  user.cassius  user.hamlet  user.julius  users.cassius  users.hamlet  users.julius
test/: TestImport.hs
test/Handler/: HomeSpec.hs
tests/: Application.hs  Foundation.hs  LICENSE  Model.hs  Settings.hs  haskellers.cabal
tests/Handler/: Admin.hs  Bling.hs  Email.hs  Faq.hs  Job.hs  News.hs  Poll.hs  Profile.hs  Root.hs  Skills.hs  Team.hs  Topic.hs  User.hs
tests/config/: keter.yaml
tests/deploy/: Procfile
tests/messages/: ja.msg  ru.msg  ua.msg
tests/static/tmp/: 1FeJJ045.css  1tiBEplC.js  4v_LoG7D.css  GdF0ULLk.js  Vr2Vi3z6.js  YqZ5RxCQ.css  myAOxsSB.css
tests/templates/: admin-controls.cassius  admin-controls.hamlet  admin-users.hamlet  analytics.julius  bling.hamlet  faq.hamlet  homepage.cassius  login-status.cassius  login-status.hamlet  messages.cassius  messages.hamlet  navbar-section.hamlet  news.cassius  news.hamlet  profile.julius  team.hamlet  teams-form.hamlet  teams.hamlet  topic.cassius  user.hamlet
