name:              haskellers
version:           0.0.0
license:           BSD3
license-file:      LICENSE
author:            Michael Snoyman
maintainer:        Michael Snoyman
synopsis:          The greatest Yesod web application ever.
description:       I'm sure you can say something clever here if you try.
category:          Web
stability:         Experimental
cabal-version:     >= 1.8
build-type:        Simple
homepage:          http://haskellers.yesodweb.com/

Flag dev
    Description:   Turn on development settings, like auto-reload templates.
    Default:       False

Flag library-only
    Description:   Build for use with "yesod devel"
    Default:       False

library
    exposed-modules: Application
                     Foundation
                     Import
                     Model
                     Model.Types
                     Settings
                     Settings.StaticFiles
                     Settings.Development
                     Handler.Root
                     Handler.Profile
                     Handler.User
                     Handler.Admin
                     Handler.Email
                     Handler.Skills
                     Handler.Package
                     Handler.Faq
                     Handler.News
                     Handler.Job
                     Handler.Team
                     Handler.Topic
                     Handler.Bling
                     Handler.Poll

    if flag(dev) || flag(library-only)
        cpp-options:   -DDEVELOPMENT
        ghc-options:   -Wall -O0
    else
        ghc-options:   -Wall -O2

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                EmptyDataDecls
                NoMonomorphismRestriction
                ViewPatterns

    build-depends: base
                 , yesod
                 , yesod-core
                 , yesod-auth
                 , yesod-auth-fb
                 , yesod-fb
                 , yesod-static
                 , yesod-form
                 , yesod-newsfeed
                 , yesod-test
                 , clientsession
                 , bytestring
                 , text
                 , persistent
                 , persistent-postgresql
                 , template-haskell
                 , shakespeare
                 , hjsmin
                 , monad-control
                 , wai-extra
                 , yaml
                 , http-conduit
                 , directory
                 , warp
                 , blaze-html
                 , data-default
                 , time
                 , transformers
                 , containers
                 , old-locale
                 , stm
                 , fb
                 , http-types
                 , blaze-builder
                 , text-icu
                 , random-shuffle
                 , random
                 , pureMD5
                 , utf8-string
                 , cryptocipher
                 , base64-bytestring
                 , mime-mail
                 , mime-mail-ses
                 , resourcet
                 , monad-logger
                 , aeson
                 , cipher-aes

executable         haskellers
    if flag(library-only)
        Buildable: False

    main-is:           main.hs
    hs-source-dirs:    app
    build-depends:     base
                     , haskellers
                     , yesod

    ghc-options:       -threaded -O2
