name:              haskellers
version:           0.0.0
license:           BSD3
license-file:      LICENSE
author:            Michael Snoyman
maintainer:        Michael Snoyman
synopsis:          The greatest Yesod web application ever.
description:       I'm sure you can say something clever here if you try.
category:          Web
stability:         Experimental
cabal-version:     >= 1.8
build-type:        Simple
homepage:          http://haskellers.yesodweb.com/

Flag dev
    Description:   Turn on development settings, like auto-reload templates.
    Default:       False

Flag library-only
    Description:   Build for use with "yesod devel"
    Default:       False

library
    hs-source-dirs: ., app
    exposed-modules: Application
                     Foundation
                     Import
                     Import.NoFoundation
                     Model
                     Settings
                     Settings.StaticFiles
                     Handler.Root
                     Handler.Profile
                     Handler.User
                     Handler.Admin
                     Handler.Email
                     Handler.Skills
                     Handler.Package
                     Handler.Faq
                     Handler.News
                     Handler.Job
                     Handler.Team
                     Handler.Topic
                     Handler.Bling
                     Handler.Poll

    if flag(dev) || flag(library-only)
        cpp-options:   -DDEVELOPMENT
        ghc-options:   -Wall -O0
    else
        ghc-options:   -Wall -O2

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                FlexibleInstances
                EmptyDataDecls
                NoMonomorphismRestriction
                DeriveDataTypeable
                ViewPatterns
                TupleSections
                RecordWildCards

    build-depends: base
                 , yesod
                 , yesod-core
                 , yesod-auth
                 , yesod-auth-fb
                 , yesod-fb
                 , yesod-static
                 , yesod-form
                 , yesod-newsfeed
                 , yesod-test
                 , clientsession
                 , bytestring
                 , text
                 , persistent
                 , persistent-postgresql
                 , template-haskell
                 , shakespeare
                 , hjsmin
                 , monad-control
                 , wai-extra
                 , yaml
                 , http-conduit
                 , directory
                 , warp
                 , blaze-html
                 , data-default
                 , time
                 , transformers
                 , containers
                 , old-locale
                 , stm
                 , fb
                 , http-types
                 , blaze-builder
                 , text-icu
                 , random-shuffle
                 , random
                 , pureMD5
                 , utf8-string
                 , cryptocipher
                 , base64-bytestring
                 , mime-mail
                 , mime-mail-ses
                 , resourcet
                 , monad-logger
                 , aeson
                 , cipher-aes

executable         haskellers
    if flag(library-only)
        Buildable: False

    main-is:           main.hs
    hs-source-dirs:    app
    build-depends:     base
                     , haskellers
                     , yesod

    ghc-options:       -threaded -O2


test-suite test
    type:              exitcode-stdio-1.0
    main-is:           Spec.hs
    other-modules:     Handler.CommentSpec
                       Handler.CommonSpec
                       Handler.HomeSpec
                       TestImport
    hs-source-dirs:    test
    ghc-options:       -Wall

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                FlexibleInstances
                EmptyDataDecls
                NoMonomorphismRestriction
                DeriveDataTypeable
                ViewPatterns
                TupleSections

    build-depends: base
                 , haskellers
                 , yesod-test >= 1.5.0.1 && < 1.6
                 , yesod-core
                 , yesod
                 , persistent
                 , persistent-mysql
                 , resourcet
                 , monad-logger
                 , shakespeare
                 , transformers
                 , hspec >= 2.0.0
                 , classy-prelude
                 , classy-prelude-yesod
                 , aeson
